# EyeLogic-LSL

./: README.md  install.bat
dependencies/eyelogic/include/elapi/: ELApi.h  ELGazeSample.h  ElExports.hpp
src/: CMakeLists.txt  LSLClient.cpp  LSLClient.h  main.cpp
src/cmake/Modules/: FindELApi.cmake  Findlsl.cmake
